# MovieApp-MASVS-Recomendations-

./: README.md
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  api_key.cpp
app/src/main/java/com/example/movieapp/: ApiClient.java  ApiInterface.java  ApiKey.java  DetailActivity.java  FavoritesActivity.java  GenreAdapter.java  MainActivity.java  Movie.java  MovieAdapter.java  MovieGenre.java  MovieResponse.java  PlanningActivity.java  PlanningAdapter.java  PlanningItem.java  PlanningNotificationReceiver.java  SimilarMovieAdapter.java
app/src/main/java/com/example/movieapp/security/: DebugProtection.java  EncryptionManager.java  SSLConfig.java  SecureFavoritesManager.java  SecurityManager.java
app/src/main/res/drawable/: genre_divider.xml  ic_calendar.xml  ic_launcher_foreground.xml  ic_theme_switch.xml  search_background.xml
app/src/main/res/layout/: activity_detail.xml  activity_favorites.xml  activity_main.xml  activity_planning.xml  dialog_genres.xml  item_genre.xml  item_planning.xml  movie_item.xml  similar_movie_item.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
